<resources>
    <string name="facebook_app_id">1683129748613047</string>
    <string name="app_name">PhoToDo</string>
    <string name="action_settings">Settings</string>
    <string name="the_button_text">Sign-up</string>
    <string name="add_task_button_text">Create Account</string>
    <string name="sign_in_button_text">Sign in</string>
    <string name="sign_up_button_text">Create Account</string>
    <string name="password_input_text">Password</string>
    <string name="password_confirm_text">Repeat password</string>
    <string name="email_input_text">Email</string>
    <string name="accept_terms">I sell my kidney</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="task_name_hint">Task Name</string>
    <string name="set_time_button_text">Set Time</string>
    <string name="set_day_button_text">Set Date</string>
    <string name="name_hint">Name</string>
    <string name="age_hint">Age</string>
    <string name="task_due_date">Task Due Date</string>
    <string name="task_responsible">Task Responsible</string>
    <string name="i_forgot_my_password">I forgot my password</string>
    <string name="task_name">Task Name</string>
    <string name="group_join_text">Join or create a group</string>
    <string name="create_group_button_text">Create</string>
    <string name="group_name">Type a name!</string>
    <string name="loading_message">Retrievin\' data from the base o\' Fire </string>
    <string name="confirm_text">Confirm</string>
    <string name="reset_pass_text">Reset password?</string>
    <string name="email_reset_message">We\'ve sent you an email with instructions.</string>
    <string name="connection_error_message">Sorry, there was an error, try again.</string>
    <string name="my_tasks_name">My Tasks</string>
    <string name="empty_list_message_text">Nothing seems to be here :(</string>
    <string name="logo_description">App logo</string>
    <string name="save_task_text">Save Task</string>
    <string name="group_settings">Group Settings</string>
    <string name="settings_text">Other Settings</string>
    <string name="task_missing_name">The task is missing a name!</string>
    <string name="task_name_long">The task name is too long.</string>
    <string name="group_join_button">JOIN</string>
    <string name="group_create_button">CREATE</string>
    <string name="delete_btn_text">Delete</string>
    <string name="cancel_btn_text">Cancel</string>
    <string name="feedback_text">Send us some feedback!</string>
    <string name="feedback_button">Send</string>

</resources>
