<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/backgrou">


    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/group_join_text"
        android:layout_gravity="center_vertical"
        android:id="@+id/group_join"
        android:layout_marginTop="42dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:id="@+id/group_name_input"
        android:hint="@string/group_name"
        android:layout_marginTop="52dp"
        android:layout_below="@+id/group_join"
        android:layout_centerHorizontal="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_group_button_text"
        android:id="@+id/create_group_button"
        android:layout_below="@+id/group_name_input"
        android:layout_alignEnd="@+id/group_name_input"
        android:layout_marginTop="35dp"/>

</RelativeLayout>