<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:background="@drawable/illos">

    <EditText
        android:layout_width="280dp"
        android:layout_height="wrap_content"
        android:id="@+id/taskNameInput"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="43dp"
        android:layout_marginTop="43dp"
        android:hint="@string/task_name_hint" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:ems="10"
        android:id="@+id/dateInput"
        android:layout_below="@+id/taskNameInput"
        android:layout_alignStart="@+id/taskNameInput"
        android:layout_marginTop="32dp"
        android:enabled="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_day_button_text"
        android:id="@+id/setDateButton"
        android:background="@color/abc_search_url_text_normal"
        android:layout_above="@+id/timeInput"
        android:layout_alignParentEnd="true" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:ems="10"
        android:id="@+id/timeInput"
        android:layout_below="@+id/dateInput"
        android:layout_alignStart="@+id/taskNameInput"
        android:layout_marginTop="32dp"
        android:enabled="true"
        android:clickable="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_time_button_text"
        android:id="@+id/setTimeButton"
        android:enabled="true"
        android:clickable="false"
        android:background="@color/abc_search_url_text_normal"
        android:layout_below="@+id/timeInput"
        android:layout_alignStart="@+id/setDateButton" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="addTask"
        android:id="@+id/addTaskBtn"
        android:layout_marginBottom="56dp"
        android:background="@color/abc_search_url_text_normal"
        android:layout_alignParentBottom="true"
        android:layout_alignEnd="@+id/timeInput" />


</RelativeLayout>
